--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+FORWARD_NGINX_PORT=
+NODE_PLATFORM=
+
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
